# blirc

./: README.md  airc.py  config.ini.example  config.toml.example  pyproject.toml
airc/: consts.py  main.py
airclib/: config.py  message.py  network.py  speech.py  ui.py
blirc/: __main__.py  buffer.py  buffer_manager.py  commands.py  config.py  consts.py  echo  message.py  network.py  network_manager.py  speech.py  text_input.py  ui.py
