[project]
name = "blirc"
version = "0.1.0"
authors = [
  { name="Michael Connor Buchan", email="mikey@blindcomputing.org" },
]
description = "Your favourite blindy IRC client"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["irc", "self-voicing", "blind", "accessible"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]

dependencies = [
    "appdirs~=1.4.4",
    "cytolk~=0.1.12; sys_platform=='win32'",
    "human-readable~=1.3.1",
    "miniirc~=1.9.1",
    "pygame~=2.1.2",
    "pyobjc~=9.0.1; sys_platform=='darwin'",
    "tomlkit~=0.11.6",
]

gui-scripts = { blirc = "blirc.__main__:main" }

[project.urls]
"Homepage" = "https://github.com/lower-elements/blirc"
"Bug Tracker" = "https://github.com/lower-elements/blirc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
